[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/HUD_Quest_Script.gd" type="Script" id=1]
[ext_resource path="res://assets/Font/PixelOperatorSC.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/HUD/quest.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 2 )

[node name="HUD_Quest" type="Control"]
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HUD_Quest_Panel" type="Panel" parent="."]
margin_left = 7.0
margin_top = 155.0
margin_right = 334.0
margin_bottom = 568.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="textQuest" type="Label" parent="."]
margin_left = 31.2725
margin_top = 207.0
margin_right = 242.272
margin_bottom = 568.0
custom_fonts/font = SubResource( 1 )
text = "Teste "
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="titleQuest" type="Label" parent="."]
margin_left = 82.0
margin_top = 210.0
margin_right = 296.0
margin_bottom = 277.0
custom_fonts/font = SubResource( 2 )
text = "teste
"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 15.0
margin_top = 193.0
margin_right = 72.0
margin_bottom = 244.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}
